# My-Programming-Language-Rust-Type-System

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  lang.cabal
app/: Main.hs
examples/: blocks_example.afp  interesting_example.afp  ref_example.afp  sample.afp
grammar/: Lang.cf
src/: Env.hs  Evaluator.hs  FiniteMap.hs  Run.hs  Value.hs
src/Interp/: Expr.hs  Prog.hs  Stmt.hs  Stmt.hs-boot
src/TypeCheck/: Expr.hs  Prog.hs  Stmt.hs
test/: BogusTests.hs  InterpTests.hs  Main.hs  TypeCheckTests.hs
